[package]
name = "flowtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossterm = "0.26.1"
relm4 = { version = "0.5.1", features = ["libadwaita"] }
relm4-components = "0.5.1"
rodio = "0.17.1"
