[package]
name = "flowtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.24"
confy = "0.5.0"
crossterm = "0.26.1"
lazy_static = "1.4.0"
relm4 = { version = "0.5.1", features = ["libadwaita"] }
relm4-components = "0.5.1"
rodio = "0.17.1"
serde = "1.0.157"
serde_derive = "1.0.157"

[dev-dependencies]
cargo-watch = "8.0"
